--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,11 +38,11 @@ body {
 }
 
 .header-container {
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
 
     .cover-image {
-        background-image: url(../images/cover.jpg);
+        background-image: url(../images/cover_2.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -94,14 +94,14 @@ body {
     right: 15px;
     bottom: 10px;
     cursor: pointer;
-    font-weight: bold;
+    // font-weight: bold;
     font-family: inherit;
 }
 
 .button {
     background: #e8e8e8;
     padding: 10px;
-    width: initial;
+    width: 100%;
     outline: none;
     border: none;
     border-radius: 5px;
@@ -132,6 +132,9 @@ body {
 
 // Navigation Bar
 .top-navigation {
+    position: relative;
+    z-index: 2;
+
     .brand-logo {
         height: 64px;
         left: 20px;
@@ -193,4 +196,53 @@ body {
         box-shadow: none !important;
         margin: 0 8px;
     }
+}
+
+.mg-minus {
+    &-10 {
+        margin-top: -10px;
+    }
+    &-20 {
+        margin-top: -20px;
+    }
+}
+
+.tabs {
+    
+    .indicator {
+        background-color: #448aff;
+    }
+
+    .tab {
+        a {
+            color: gray;
+            text-transform: none;
+            // margin-bottom: 10px;
+            &:hover {
+                font-weight: 500;
+                color: gray;
+                background-color: rgb(233, 233, 233);
+                border-radius: 10px;
+            }
+
+            &.active {
+                font-weight: 500;
+                color: #448aff;
+
+                &:hover, &:active, &:focus {
+                    color: #448aff;
+                    border-radius: none;
+                    background-color: transparent;
+                }
+            }
+        }
+    }
+}
+
+.min-h-200 {
+    min-height: 200px;
+}
+
+.no-margin {
+    margin: 0;
 }
